@@ -5,6 +5,8 @@ Revision history for Dist-Zilla-Plugin-CheckExtraTests
     [Changed]
 
     - Added 'jobs' argument for 'dzil xtest' for parallel testing
+    - passing new 'default_jobs' option (added to Dist::Zilla 5.014) through
+      to test runner for parallel testing
 
 0.018     2014-02-18 17:20:58-05:00 America/New_York
 
